--- a/src/Infrastructure/Infrastructure.csproj
+++ b/src/Infrastructure/Infrastructure.csproj
@@ -92,7 +92,9 @@
     <Compile Include="Extensions\WebExtensions.cs" />
     <Compile Include="Repository\BaseRepository.cs" />
     <Compile Include="Repository\CarRepository.cs" />
+    <Compile Include="Repository\CartRepository.cs" />
     <Compile Include="Repository\ContactRepository.cs" />
+    <Compile Include="Repository\ProductRepository.cs" />
     <Compile Include="Service\ApplicationSettings.cs" />
     <Compile Include="Service\CarService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
